# egl-wrapper

./: CMakeLists.txt  LICENSE  README.md  egl-wrapper.c  egl-wrapper.h
examples/: CMakeLists.txt  README.md
examples/slow_render/: CMakeLists.txt  slow_render.c
